app/v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-container-service2
  namespace: app-employees
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30001
  selector:
    app: employees
    version: v2
  type: NodePort
